Fixing mobile navigation background visibility issues

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -73,6 +73,10 @@
 		max-width: $page-max-width;
 	}
 
+	&__content--hidden {
+		display: none;
+	}
+
 	&__background-image-container {
 		left: 0;
 		position: fixed;
@@ -103,9 +107,5 @@
 	&--centered {
 		align-items: center;
 		display: flex;
-	}
-
-	&--hidden {
-		display: none;
 	}
 }
